Remove deleted files from the repository

--- a/templates/fountainchurch/contact.html
+++ b/templates/fountainchurch/contact.html
@@ -8,11 +8,11 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h1 class="display-3 text-white animated slideInDown">Contact</h1>
+                    <h1 class="display-3 text-white animated slideInDown"style=" font-family: 'serif';">Contact Us</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item"><a class="text-white" href="{% url 'home' %}">Home</a></li>
-                            <li class="breadcrumb-item"><a class="text-white" href="#">Minister</a></li>
+                            <li class="breadcrumb-item"><a class="text-white" href="{% url 'home' %}"style=" font-family: 'serif';">Home</a></li>
+                            <li class="breadcrumb-item"><a class="text-white" href="{%url 'about'%}"style=" font-family: 'serif';">About</a></li>
                         </ol>
                     </nav>
                 </div>
@@ -26,13 +26,12 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3">Contact Us</h6>
-                <h1 class="mb-5"style="color: #d4af37;">Contact For Any Query</h1>
+                <h1 class="mb-5"style="color: #d4af37;"style=" font-family: 'serif';">Share your testimony with us..</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h5>Get In Touch</h5>
-                    <p class="mb-4">We’d love to hear from you Whether you have questions, feedback, 
+                    <h5 style=" font-family: 'serif';">Get In Touch</h5>
+                    <p class="mb-4"style=" font-family: 'serif';">We’d love to hear from you Whether you have questions, feedback, 
                         or just want to say hello, feel free to reach out to us, God bless you.</p>
 
                         <a href="https://maps.app.goo.gl/kkrY5vSyGTRRczi38"target="_blank">
@@ -41,9 +40,9 @@
                             <i class="fa fa-map-marker-alt text-white"></i>
                         </div>
                         <div class="ms-3">
-                            <h5 class="text-primary">Church Address</h5>
-                            <p class="mb-0">View Google Map</p>
-                            <p class="mb-0">91/93 Lighthouse Cinemas, Jibowu Lagos</p>
+                            <h5 class="text-primary"style=" font-family: 'serif';">Church Address</h5>
+                            <p class="mb-0"style=" font-family: 'serif';">View Google Map</p>
+                            <p class="mb-0"style=" font-family: 'serif';">91/93 Lighthouse Cinemas, Jibowu Lagos</p>
                         </div>
                     </div>
                 </a>
@@ -53,8 +52,8 @@
                             <i class="fa fa-phone-alt text-white"></i>
                         </div>
                         <div class="ms-3">
-                            <h5 class="text-primary">Whatsapp & Mobile</h5>
-                            <p><a href="https://wa.me/+2349065419288?text=Hi Fountain Church?"target="_blank"class="mb-0">+012 345 67890</a></p>
+                            <h5 class="text-primary"style=" font-family: 'serif';">Whatsapp & Mobile</h5>
+                            <p><a href="https://wa.me/+2349065419288?text=Hi Fountain Church?"target="_blank"class="mb-0"style=" font-family: 'serif';">+012 345 67890</a></p>
                         </div>
                     </div>
                 </a>
@@ -64,8 +63,8 @@
                             <i class="fa fa-envelope-open text-white"></i>
                         </div>
                         <div class="ms-3">
-                            <h5 class="text-primary">Email</h5>
-                            <p class="mb-0">fountainofthelivingwordng@gmail.com</p>
+                            <h5 class="text-primary"style=" font-family: 'serif';">Email</h5>
+                            <p class="mb-0"style=" font-family: 'serif';">fountainofthelivingwordng@gmail.com</p>
                         </div>
                     </div>
                 </a>
@@ -86,30 +85,30 @@
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control" name="message-name" placeholder="Your Name">
-                                    <label for="name">Your Name</label>
+                                    <input type="text" class="form-control"style=" font-family: 'serif';" name="message-name" placeholder="Your Name">
+                                    <label for="name"style=" font-family: 'serif';">Your Name</label>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="email" class="form-control" name="message-email" placeholder="Your Email">
-                                    <label for="email">Your Email</label>
+                                    <input type="email" class="form-control"style=" font-family: 'serif';" name="message-email" placeholder="Your Email">
+                                    <label for="email"style=" font-family: 'serif';">Your Email</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control" name="message-subject" placeholder="Subject">
-                                    <label for="subject">Subject</label>
+                                    <input type="text" class="form-control"style=" font-family: 'serif';" name="message-subject" placeholder="Subject">
+                                    <label for="subject"style=" font-family: 'serif';">Subject</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <textarea class="form-control" placeholder="Leave a message here" name="message" style="height: 150px"></textarea>
-                                    <label for="message">Message</label>
+                                    <textarea class="form-control"style=" font-family: 'serif';" placeholder="Leave a message here" name="message" style="height: 150px"></textarea>
+                                    <label for="message"style=" font-family: 'serif';">Message</label>
                                 </div>
                             </div>
                             <div class="col-12">
-                                <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
+                                <button class="btn btn-primary w-100 py-3" type="submit"style=" font-family: 'serif';">Send Message</button>
                             </div>
                         </div>
                     </form>
