--- a/templates/fountainchurch/galary.html
+++ b/templates/fountainchurch/galary.html
@@ -9,11 +9,11 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h1 class="display-3 text-white animated slideInDown">Church Galleries</h1>
+                    <h1 class="display-3 text-white animated slideInDown"style="font-family: 'serif';">Church Galleries</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item"><a class="text-white" href="{% url 'home'%}">Home</a></li>
-                            <li class="breadcrumb-item"><a class="text-white" href="{% url 'events'%}">Events</a></li>
+                            <li class="breadcrumb-item"><a class="text-white" href="{% url 'home'%}"style="font-family: 'serif';">Home</a></li>
+                            <li class="breadcrumb-item"><a class="text-white" href="{% url 'events'%}"style="font-family: 'serif';">Events</a></li>
                         </ol>
                     </nav>
                 </div>
@@ -28,7 +28,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3"> Galleries Post</h6>
+                <h6 class="section-title bg-white text-center text-primary px-3"style="font-family: 'serif';"> Galleries Post</h6>
              
             </div><br>
             <div class="row g-4 justify-content-center">
@@ -40,12 +40,12 @@
                             <img class="img-fluid" src="{{ post.galary_img.url }}"style="height: 300px; width: 100%; object-fit: cover; border-radius:5px;" alt="">
                         </a>
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                                <a href="{% url 'galary_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 10 10 30px;">View</a>
+                                <a style="font-family: 'serif';"href="{% url 'galary_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 10 10 30px;">View</a>
                             </div>
                        
                         </div>
                         <div class="text-center p-4 pb-0">
-                            <a href="{% url 'galary_detail' post.pk %}"> <h5 class="mb-0"style="color: #d4af37;">{{ post.galary_title|truncatechars:20}}</h5></a>
+                            <a href="{% url 'galary_detail' post.pk %}"> <h5 class="mb-0"style="color: #d4af37;font-family: 'serif';">{{ post.galary_title|truncatechars:20}}</h5></a>
                             <div class="mb-3">
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
