--- a/templates/fountainchurch/vision.html
+++ b/templates/fountainchurch/vision.html
@@ -8,11 +8,11 @@
     <div class="container py-5">
         <div class="row justify-content-center">
             <div class="col-lg-10 text-center">
-                <h6 class="display-3 text-white animated slideInDown">Vision & MISSION</h6>
+                <h6 class="display-3 text-white animated slideInDown"style="font-family: 'serif';">Vision & MISSION</h6>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center">
-                        <li class="breadcrumb-item"><a class="text-white" href="{% url 'home' %}">Home</a></li>
-                        <li class="breadcrumb-item"><a class="text-white" href="{% url 'contact' %}">Contact</a></li>
+                        <li class="breadcrumb-item"><a class="text-white" href="{% url 'home' %}"style="font-family: 'serif';">Home</a></li>
+                        <li class="breadcrumb-item"><a class="text-white" href="{% url 'contact' %}"style="font-family: 'serif';">Contact</a></li>
                     </ol>
                 </nav>
             </div>
@@ -26,27 +26,27 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-9 wow fadeInUp" data-wow-delay="0.3s">
-                    <h3 class="mb-4"style="color: #d4af37;">VISION: </h3>
-                    <ul><li>Effective ministry aimed at preparing believers to live in the fullness of their privileges in Christ Jesus.</li></ul><br>
-                    <h3 class="mb-4"style="color: #d4af37;">MISSION: </h3>
+                    <h3 class="mb-4"style="color: #d4af37;"style="font-family: 'serif';">VISION: </h3>
+                    <ul><li style="font-family: 'serif';">Effective ministry aimed at preparing believers to live in the fullness of their privileges in Christ Jesus.</li></ul><br>
+                    <h3 class="mb-4"style="color: #d4af37;font-family: 'serif';">MISSION: </h3>
                     <ul> 
-                        <li>Teaching and preaching Christ Jesus Crucified, the only hope of glory for all mankind.</li>
-                        <li>Being instant in prayer with all manner of prayers in communion with God.</li>
-                        <li>Living out God’s love, as the way of life towards all mankind.</li>
+                        <li style="font-family: 'serif';">Teaching and preaching Christ Jesus Crucified, the only hope of glory for all mankind.</li>
+                        <li style="font-family: 'serif';">Being instant in prayer with all manner of prayers in communion with God.</li>
+                        <li style="font-family: 'serif';">Living out God’s love, as the way of life towards all mankind.</li>
                     </ul><br>
-                    <h3 class="mb-4"style="color: #d4af37;">CORE VALUES: </h3>
+                    <h3 class="mb-4"style="color: #d4af37;font-family: 'serif';">CORE VALUES: </h3>
                     <ol> 
-                        <li>Salvation by faith in Jesus Christ alone, as the son of God and God’s sacrifice for the sin of the world.</li>
-                        <li>The Bible as the truth of God that says what it means and means what it says. Also given to reveal God through the knowledge of Jesus Christ to believers.</li>
-                        <li>The unchanging nature of God and the infallibility of the Holy Scriptures as the only record that authenticates the truth.</li>
-                        <li>The indispensable role of the Holy Spirit as our guide and helper in all of our Christian life and endeavors.</li>
-                        <li>The sanctity of marriage as a union between a man and a woman and of sex as only within marriage. Character as the heart of good Christian witness and ministry.</li>
-                        <li>The grace of God saves us and gives us the ability to overcome the sinful desires of the flesh, the ungodly world system, and enticement of satan to sin.</li>
-                        <li>The love of God as demonstrated by actions of mercy, compassion, forgiveness, charitable giving and putting value on every human life.</li>
-                        <li>The teaching and the studying of the Holy Bible as indispensable to Christian growth and maturity. And making disciples of our Lord.</li>
-                        <li>Prayer of faith as Key to accessing Divine help and intervention and power.</li>
-                        <li>Preaching of the good news of the gospel is a duty of everyone who has been saved by it.</li>
-                        <li>Healthy Church birthing as an effective means of spreading the gospel.</li>
+                        <li style="font-family: 'serif';">Salvation by faith in Jesus Christ alone, as the son of God and God’s sacrifice for the sin of the world.</li>
+                        <li style="font-family: 'serif';">The Bible as the truth of God that says what it means and means what it says. Also given to reveal God through the knowledge of Jesus Christ to believers.</li>
+                        <li style="font-family: 'serif';">The unchanging nature of God and the infallibility of the Holy Scriptures as the only record that authenticates the truth.</li>
+                        <li style="font-family: 'serif';">The indispensable role of the Holy Spirit as our guide and helper in all of our Christian life and endeavors.</li>
+                        <li style="font-family: 'serif';">The sanctity of marriage as a union between a man and a woman and of sex as only within marriage. Character as the heart of good Christian witness and ministry.</li>
+                        <li style="font-family: 'serif';">The grace of God saves us and gives us the ability to overcome the sinful desires of the flesh, the ungodly world system, and enticement of satan to sin.</li>
+                        <li style="font-family: 'serif';">The love of God as demonstrated by actions of mercy, compassion, forgiveness, charitable giving and putting value on every human life.</li>
+                        <li style="font-family: 'serif';">The teaching and the studying of the Holy Bible as indispensable to Christian growth and maturity. And making disciples of our Lord.</li>
+                        <li style="font-family: 'serif';">Prayer of faith as Key to accessing Divine help and intervention and power.</li>
+                        <li style="font-family: 'serif';">Preaching of the good news of the gospel is a duty of everyone who has been saved by it.</li>
+                        <li style="font-family: 'serif';">Healthy Church birthing as an effective means of spreading the gospel.</li>
                         
                     </ol>
                      
