--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
   
 <head>
     <meta charset="utf-8">
-    <title>Fountain Of The Living Church </title>
+    <title style="color: #d4af37;font-family: 'serif';">Fountain Of The Living Church </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -52,31 +52,31 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="{% url 'home' %}" class="nav-item nav-link active">Home</a>
+                <a href="{% url 'home' %}" class="nav-item nav-link active"style="font-family: 'serif';">Home</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About </a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"style="font-family: 'serif';">About </a>
                     <div class="dropdown-menu fade-down m-0">
-                        <a href="{% url 'about' %}" class="dropdown-item">About Us</a>
-                        <a href="{% url 'vision' %}" class="dropdown-item">Vision & Mission</a>
+                        <a href="{% url 'about' %}" class="dropdown-item"style="font-family: 'serif';">About Us</a>
+                        <a href="{% url 'vision' %}" class="dropdown-item"style="font-family: 'serif';">Vision & Mission</a>
                     </div>
                 </div>
                 <!--<a href="{% url 'pastors' %}" class="nav-item nav-link ">Ministers</a>-->
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Sermons</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"style="font-family: 'serif';">Sermons</a>
                     <div class="dropdown-menu fade-down m-0">
-                        <a href="{% url 'sermons' %}" class="dropdown-item"> Video Sermons</a>
-                        <a href="{% url 'audio_sermons' %}" class="dropdown-item"> Audio Sermons</a>
+                        <a href="{% url 'sermons' %}" class="dropdown-item"style="font-family: 'serif';"> Video Sermons</a>
+                        <a href="{% url 'audio_sermons' %}" class="dropdown-item"style="font-family: 'serif';"> Audio Sermons</a>
                     </div>
                 </div>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Media</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"style="font-family: 'serif';">Media</a>
                     <div class="dropdown-menu fade-down m-0">
-                        <a href="{% url 'events' %}" class="dropdown-item">News & Events</a>
-                        <a href="{% url 'galary' %}" class="dropdown-item">Gallery</a>
+                        <a href="{% url 'events' %}" class="dropdown-item"style="font-family: 'serif';">News & Events</a>
+                        <a href="{% url 'galary' %}" class="dropdown-item"style="font-family: 'serif';">Gallery</a>
                     </div>
                 </div>
             </div>
-            <a href="{% url 'contact' %}" class="btn btn-primary py-4 px-lg-5 ">Contact Us<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="{% url 'contact' %}" class="btn btn-primary py-4 px-lg-5 "style="font-family: 'serif';">Contact Us<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -94,23 +94,23 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Quick Link</h4>
-                    <a class="btn btn-link" href="{% url 'home' %}">Home</a>
-                    <a class="btn btn-link" href="{% url 'sermons' %}">Sermons</a>
-                    <a class="btn btn-link" href="{% url 'about' %}">About Us</a>
-                    <a class="btn btn-link" href="{% url 'contact' %}">Contact Us</a>
-                    <a class="btn btn-link" href="">Privacy Policy</a>
+                    <h4 class="text-white mb-3"style="font-family: 'serif';">Quick Link</h4>
+                    <a class="btn btn-link" href="{% url 'home' %}"style="font-family: 'serif';">Home</a>
+                    <a class="btn btn-link" href="{% url 'sermons' %}"style="font-family: 'serif';">Sermons</a>
+                    <a class="btn btn-link" href="{% url 'about' %}"style="font-family: 'serif';">About Us</a>
+                    <a class="btn btn-link" href="{% url 'contact' %}"style="font-family: 'serif';">Contact Us</a>
+                    <a class="btn btn-link" href=""style="font-family: 'serif';">Privacy Policy</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Contact</h4>
+                    <h4 class="text-white mb-3"style="font-family: 'serif';">Contact</h4>
                     <a href="https://maps.app.goo.gl/kkrY5vSyGTRRczi38"target="_blank">
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>91/93 Jibowu, Yaba Lagos</p>
+                    <p class="mb-2"style="font-family: 'serif';"><i class="fa fa-map-marker-alt me-3"></i>91/93 Jibowu, Yaba Lagos</p>
                     </a>
                     <a href="https://wa.me/++2349065419288?text=Hi Fountain Of The Living Church?"target="_blank"class="mb-0">
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+2349065419288</p>
+                    <p class="mb-2"style="font-family: 'serif';"><i class="fa fa-phone-alt me-3"></i>+2349065419288</p>
                     </a>
                     <a href="mailto:fountainofthelivingwordng@gmail.com"target="_blank">
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>fountainofthelivingwordng@gmail.com</p>
+                    <p class="mb-2"style="font-family: 'serif';"><i class="fa fa-envelope me-3"></i>fountainofthelivingwordng@gmail.com</p>
                     </a>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href="https://youtube.com/@fountainofthelivingwordchu8992?si=8sAF4xjRCxC6ue_t"target="_blank"><i class="fab fa-youtube"></i></a>
@@ -120,19 +120,19 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Support link</h4>
-                    <a class="btn btn-link" href="{% url 'about' %}">About Us</a>
-                    <a class="btn btn-link" href="{% url 'contact' %}">Contact Us</a>
-                    <a class="btn btn-link" href="{% url 'sermons' %}">Sermons</a>
-                    <a class="btn btn-link" href="{% url 'galary' %}">Galary</a>
-                    <a class="btn btn-link" href="">Privacy Policy</a>
+                    <h4 class="text-white mb-3"style="font-family: 'serif';">Support link</h4>
+                    <a class="btn btn-link" href="{% url 'about' %}"style="font-family: 'serif';">About Us</a>
+                    <a class="btn btn-link" href="{% url 'contact' %}"style="font-family: 'serif';">Contact Us</a>
+                    <a class="btn btn-link" href="{% url 'sermons' %}"style="font-family: 'serif';">Sermons</a>
+                    <a class="btn btn-link" href="{% url 'galary' %}"style="font-family: 'serif';">Galary</a>
+                    <a class="btn btn-link" href=""style="font-family: 'serif';">Privacy Policy</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Newsletter</h4>
-                    <p>SignUp with your email address.</p>
+                    <h4 class="text-white mb-3"style="font-family: 'serif';">Newsletter</h4>
+                    <p style="font-family: 'serif';">SignUp with your email address.</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"style="font-family: 'serif';">SignUp</button>
                     </div>
                 </div>
             </div>
@@ -141,7 +141,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="https://senwin.pythonanywhere.com/"target="_blank">Copyright ©</a>2025 - Fountain of the Living Church. All Right Reserved
+                        &copy; <a class="border-bottom" href="https://senwin.pythonanywhere.com/"target="_blank"style="font-family: 'serif';">Copyright ©</a>2025 - Fountain of the Living Church. All Right Reserved
                     </div>
                 </div>
             </div>
