--- a/templates/fountainchurch/about_us.html
+++ b/templates/fountainchurch/about_us.html
@@ -10,11 +10,11 @@
     <div class="container py-5">
         <div class="row justify-content-center">
             <div class="col-lg-10 text-center">
-                <h1 class="display-3 text-white animated slideInDown">About Us</h1>
+                <h1 class="display-3 text-white animated slideInDown"style="font-family: 'serif';">About Us</h1>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center">
-                        <li class="breadcrumb-item"><a class="text-white" href="{% url 'home' %}">Home</a></li>
-                        <li class="breadcrumb-item"><a class="text-white" href="#">Contact</a></li>
+                        <li class="breadcrumb-item"><a class="text-white" href="{% url 'home' %}"style="font-family: 'serif';">Home</a></li>
+                        <li class="breadcrumb-item"><a class="text-white" href="{% url 'contact'%}"style="font-family: 'serif';">Contact</a></li>
                     </ol>
                 </nav>
             </div>
@@ -32,8 +32,8 @@
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
                             <i class="fa fa-3x fa-book text-primary mb-4"></i>
-                            <h5 class="mb-3">His Word</h5>
-                            <p>Inspiring people to follow Jesus and fearlessly change the</p>
+                            <h5 class="mb-3"style="font-family: 'serif';">His Word</h5>
+                            <p style="font-family: 'serif';">Inspiring people to follow Jesus and fearlessly change the</p>
                         </div>
                     </div>
                 </div>
@@ -41,8 +41,8 @@
                     <div class="service-item text-center pt-3">
                         <div class="p-4"> 
                             <i class="fa fa-3x fa-globe text-primary mb-4"></i>
-                            <h5 class="mb-3">His People</h5>
-                            <p>Join us as we gather at one of our Fountain campuses.</p>
+                            <h5 class="mb-3"style="font-family: 'serif';">His People</h5>
+                            <p style="font-family: 'serif';">Join us as we gather at one of our Fountain campuses.</p>
                         </div>
                     </div>
                 </div>
@@ -50,8 +50,8 @@
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
                             <i class="fa fa-3x fa-home text-primary mb-4"></i>
-                            <h5 class="mb-3">His church</h5>
-                            <p>  We bring worship services to people unable to attend church regularly</p>
+                            <h5 class="mb-3"style="font-family: 'serif';">His church</h5>
+                            <p style="font-family: 'serif';">  We bring worship services to people unable to attend church regularly</p>
                         </div>
                     </div>
                 </div>
@@ -82,25 +82,25 @@
                       </div>
                    </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <h3 class="mb-4"style="color: #d4af37;">About Fountain Of The Living Church</h3>
-                    <p class="mb-4">Fountain of the Living Word Nigeria, is a Pentecostal faith-based church, 
+                    <h3 class="mb-4"style="color: #d4af37;font-family: 'serif';">About Fountain Of The Living Church</h3>
+                    <p class="mb-4"style="font-family: 'serif';">Fountain of the Living Word Nigeria, is a Pentecostal faith-based church, 
                         affiliated with the Fountain of the Living Word, East Orange, 
                         New Jersey, US.It is one of the fast growing churches with focus on God's word. We teach the truth and shape lives.</p>
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-10">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i> Sunday School: 8:00 AM - 9:00 AM</p>
+                            <p class="mb-0"style="font-family: 'serif';"><i class="fa fa-arrow-right text-primary me-2"></i> Sunday School: 8:00 AM - 9:00 AM</p>
                         </div>
                         <div class="col-sm-10">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i> Sunday Service: 9:00 AM - 11: AM</p>
+                            <p class="mb-0"style="font-family: 'serif';"><i class="fa fa-arrow-right text-primary me-2"></i> Sunday Service: 9:00 AM - 11: AM</p>
                         </div>
                         <div class="col-sm-10">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i> Monday Prayer Meeting: 6:30 PM - 8:00 PM</p>
+                            <p class="mb-0"style="font-family: 'serif';"><i class="fa fa-arrow-right text-primary me-2"></i> Monday Prayer Meeting: 6:30 PM - 8:00 PM</p>
                         </div>
                         <div class="col-sm-10">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Wednesday Bible Study: 6:30 PM - 8:30 PM </p>
+                            <p class="mb-0"style="font-family: 'serif';"><i class="fa fa-arrow-right text-primary me-2"></i>Wednesday Bible Study: 6:30 PM - 8:30 PM </p>
                         </div>
                     </div>
-                    <a class="btn btn-primary py-3 px-5 mt-2"style="border-radius: 15px;" href="{% url 'contact' %}">Contact Us</a>
+                    <a class="btn btn-primary py-3 px-5 mt-2"style="border-radius: 15px;font-family: 'serif';" href="{% url 'contact' %}">Contact Us</a>
                 </div>
             </div>
         </div>
