--- a/templates/fountainchurch/audio_sermons.html
+++ b/templates/fountainchurch/audio_sermons.html
@@ -9,10 +9,10 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h6 class="display-6 text-white animated slideInDown">Sermon Archive</h6>
+                    <h6 class="display-6 text-white animated slideInDown"style="font-family: 'serif';">Sermon Archive</h6>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item"><a class="text-white" href="{% url 'home' %}">Home</a></li>
+                            <li class="breadcrumb-item"><a class="text-white" href="{% url 'home' %}"style="font-family: 'serif';">Home</a></li>
                         </ol>
                     </nav>
                 </div>
@@ -26,7 +26,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3">Audio Sermons</h6>
+                <h6 class="section-title bg-white text-center text-primary px-3"style="font-family: 'serif';">Audio Sermons</h6>
             </div><br><br>
             <div class="row g-4 justify-content-center">
 
@@ -44,11 +44,11 @@
                             </a>
                         </div>
                         <div class="text-center p-4 pb-0">
-                            <p class="mb-4">{{ post.audio_sermons_title|truncatechars:40 }}</p>
+                            <p class="mb-4"style="font-family: 'serif';">{{ post.audio_sermons_title|truncatechars:40 }}</p>
                         </div>
                         <div class="d-flex border-top">
                             <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>By:{{ post.audio_sermons_preach_by }}</small>
-                            <a href="{%  url 'audio_sermons_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">{{ post.audio_sermons_publish_date }}</a>
+                            <a style="font-family: 'serif';"href="{%  url 'audio_sermons_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">{{ post.audio_sermons_publish_date }}</a>
                         </div>
                     </div>
                 </div>
