--- a/templates/fountainchurch/sermons.html
+++ b/templates/fountainchurch/sermons.html
@@ -9,11 +9,11 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h6 class="display-6 text-white animated slideInDown">Sermon Archive </h6>
+                    <h6 class="display-6 text-white animated slideInDown"style="font-family: 'serif';">Sermon Archive </h6>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item"><a class="text-white" href="{% url 'home' %}">Home</a></li>
-                            <li class="breadcrumb-item"><a class="text-white" href="{% url 'blog' %}">Blog Post</a></li>
+                            <li class="breadcrumb-item"><a class="text-white" href="{% url 'home' %}"style="font-family: 'serif';">Home</a></li>
+                           
                         </ol>
                     </nav>
                 </div>
@@ -27,7 +27,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3">Video Sermons</h6>
+                <h6 class="section-title bg-white text-center text-primary px-3"style="font-family: 'serif';">Video Sermons</h6>
             </div><br><br>
             <div class="row g-4 justify-content-center">
                 {% for post in object_list %}
@@ -43,15 +43,15 @@
                         </div>
                         <div class="text-center p-4 pb-0">
                             <a href="{%  url 'sermons_detail' post.pk %}">
-                             <h3 class="mb-0"style="color: #d4af37;">{{ post.sermons_title|truncatechars:15}}</h3>
+                             <h3 class="mb-0"style="color: #d4af37;font-family: 'serif';">{{ post.sermons_title|truncatechars:15}}</h3>
                             </a>
                          
-                            <p class="mb-4">{{ post.sermons_description|truncatechars:70 }}</p>
+                            <p class="mb-4"style="font-family: 'serif';">{{ post.sermons_description|truncatechars:70 }}</p>
                         </div>
                         <div class="d-flex border-top">
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>By:{{ post.sermons_preach_by }}</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"style="font-family: 'serif';"></i>By:{{ post.sermons_preach_by }}</small>
                            
-                            <a href="{% url 'sermons_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">{{ post.sermons_publish_date }}</a>
+                            <a href="{% url 'sermons_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;font-family: 'serif';">{{ post.sermons_publish_date }}</a>
                         </div>
                     </div>
                 </div>
