--- a/templates/fountainchurch/about_us.html
+++ b/templates/fountainchurch/about_us.html
@@ -32,7 +32,7 @@
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
                             <i class="fa fa-3x fa-book text-primary mb-4"></i>
-                            <h5 class="mb-3"style="font-family: 'serif';">His Word</h5>
+                            <h5 class="mb-3"style="font-family: 'serif';color: #d4af37;">His Word</h5>
                             <p style="font-family: 'serif';">Inspiring people to follow Jesus and fearlessly change the</p>
                         </div>
                     </div>
@@ -41,7 +41,7 @@
                     <div class="service-item text-center pt-3">
                         <div class="p-4"> 
                             <i class="fa fa-3x fa-globe text-primary mb-4"></i>
-                            <h5 class="mb-3"style="font-family: 'serif';">His People</h5>
+                            <h5 class="mb-3"style="font-family: 'serif';color: #d4af37;">His People</h5>
                             <p style="font-family: 'serif';">Join us as we gather at one of our Fountain campuses.</p>
                         </div>
                     </div>
@@ -50,7 +50,7 @@
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
                             <i class="fa fa-3x fa-home text-primary mb-4"></i>
-                            <h5 class="mb-3"style="font-family: 'serif';">His church</h5>
+                            <h5 class="mb-3"style="font-family: 'serif';color: #d4af37;">His church</h5>
                             <p style="font-family: 'serif';">  We bring worship services to people unable to attend church regularly</p>
                         </div>
                     </div>
