--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -8,10 +8,12 @@
         {% for first_image in first_images %}
         <div class="owl-carousel-item position-relative">
             <!-- Video with Italian-style elegance -->
-            <video autoplay muted playsinline loop width="100%" height="100%" style="object-fit: cover; border-radius:5px;" controls>
+
+            <video autoplay muted playsinline loop style="object-fit: cover; width: 100%; height: 100vh; border-radius: 5px;" controls>
                 <source src="{{ first_image.fountain_church_video.url }}" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+            
         </div>
 
         <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
