--- a/templates/base.html
+++ b/templates/base.html
@@ -42,44 +42,46 @@
     <!-- Spinner End -->
 
 
-    <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
-        <div class="logo-normal">
-            <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/logo.jpg'%}"style=" border-radius:5px; margin-left:25px;"width="85" height="50" alt=""></a>
-        </div>
-        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="{% url 'home' %}" class="nav-item nav-link active"style="font-family: 'serif';">Home</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"style="font-family: 'serif';">About </a>
-                    <div class="dropdown-menu fade-down m-0">
-                        <a href="{% url 'about' %}" class="dropdown-item"style="font-family: 'serif';">About Us</a>
-                        <a href="{% url 'vision' %}" class="dropdown-item"style="font-family: 'serif';">Vision & Mission</a>
-                    </div>
-                </div>
-                <!--<a href="{% url 'pastors' %}" class="nav-item nav-link ">Ministers</a>-->
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"style="font-family: 'serif';">Sermons</a>
-                    <div class="dropdown-menu fade-down m-0">
-                        <a href="{% url 'sermons' %}" class="dropdown-item"style="font-family: 'serif';"> Video Sermons</a>
-                        <a href="{% url 'audio_sermons' %}" class="dropdown-item"style="font-family: 'serif';"> Audio Sermons</a>
-                    </div>
-                </div>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"style="font-family: 'serif';">Media</a>
-                    <div class="dropdown-menu fade-down m-0">
-                        <a href="{% url 'events' %}" class="dropdown-item"style="font-family: 'serif';">News & Events</a>
-                        <a href="{% url 'galary' %}" class="dropdown-item"style="font-family: 'serif';">Gallery</a>
-                    </div>
+ <!-- Navbar Start -->
+<nav class="navbar navbar-expand-lg navbar-light sticky-top p-0">
+    <div class="logo-normal">
+        <a class="navbar-brand" href="{% url 'home' %}">
+            <img src="{% static 'img/logo.jpg'%}" style="border-radius:5px; margin-left:25px;" width="85" height="50" alt="">
+        </a>
+    </div>
+    <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+        <div class="navbar-nav ms-auto p-4 p-lg-0">
+            <a href="{% url 'home' %}" class="nav-item nav-link active" style="font-family: 'serif';">Home</a>
+            <div class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" style="font-family: 'serif';">About</a>
+                <div class="dropdown-menu fade-down m-0">
+                    <a href="{% url 'about' %}" class="dropdown-item" style="font-family: 'serif';">About Us</a>
+                    <a href="{% url 'vision' %}" class="dropdown-item" style="font-family: 'serif';">Vision & Mission</a>
                 </div>
             </div>
-            <a href="{% url 'contact' %}" class="btn btn-primary py-4 px-lg-5 "style="font-family: 'serif';">Contact Us<i class="fa fa-arrow-right ms-3"></i></a>
+            <div class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" style="font-family: 'serif';">Sermons</a>
+                <div class="dropdown-menu fade-down m-0">
+                    <a href="{% url 'sermons' %}" class="dropdown-item" style="font-family: 'serif';">Video Sermons</a>
+                    <a href="{% url 'audio_sermons' %}" class="dropdown-item" style="font-family: 'serif';">Audio Sermons</a>
+                </div>
+            </div>
+            <div class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" style="font-family: 'serif';">Media</a>
+                <div class="dropdown-menu fade-down m-0">
+                    <a href="{% url 'events' %}" class="dropdown-item" style="font-family: 'serif';">News & Events</a>
+                    <a href="{% url 'galary' %}" class="dropdown-item" style="font-family: 'serif';">Gallery</a>
+                </div>
+            </div>
         </div>
-    </nav>
-    <!-- Navbar End -->
+        <a href="{% url 'contact' %}" class="btn btn-primary py-4 px-lg-5" style="font-family: 'serif';">Contact Us<i class="fa fa-arrow-right ms-3"></i></a>
+    </div>
+</nav>
+<!-- Navbar End -->
+
 
 
   {% block content %}
