--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -9,7 +9,7 @@
         <div class="owl-carousel-item position-relative">
             <!-- Video with Italian-style elegance -->
 
-            <video autoplay muted playsinline loop style="object-fit: cover; width: 100%; height: 100vh; border-radius: 5px;" controls>
+            <video autoplay muted playsinline loop style="object-fit: cover; width: 100%; height: 130vh;" controls>
                 <source src="{{ first_image.fountain_church_video.url }}" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
