Remove deleted files from the repository

--- a/templates/fountainchurch/events.html
+++ b/templates/fountainchurch/events.html
@@ -29,7 +29,7 @@
                 <div class="col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
-                            <i class="fa fa-3x fa-church text-primary mb-4"></i>
+                            <i class="fa fa-3x fa-church text-danger mb-4"></i>
                             <h5 class="mb-3style="font-family: 'serif';"">Sunday Service</h5>
                             <p style="font-family: 'serif';">Sunday School: 8:00 AM - 9:00 AM</p>
                             <p style="font-family: 'serif';">Sunday Service: 9:00 AM - 11: AM</p>
@@ -39,7 +39,7 @@
                 <div class="col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item text-center pt-3">
                         <div class="p-4"> 
-                            <i class="fa fa-3x fa-church text- primary mb-4"></i>
+                            <i class="fa fa-3x fa-church text-danger mb-4"></i>
                             <h5 class="mb-3"style="font-family: 'serif';">Monday Service</h5>
                             <p style="font-family: 'serif';">Monday Prayer Meeting: 6:30 PM - 8:00 PM</p>
                         </div>
@@ -48,7 +48,7 @@
                 <div class="col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
-                            <i class="fa fa-3x fa-church text-primary mb-4"></i>
+                            <i class="fa fa-3x fa-church text-danger mb-4"></i>
                             <h5 class="mb-3"style="font-family: 'serif';">Wednesday Service</h5>
                             <p style="font-family: 'serif';">Wednesday Bible Study: 6:30 PM - 8:30 PM</p>
                         </div>
