--- a/static/css/style.css
+++ b/static/css/style.css
@@ -117,7 +117,6 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
     font-weight: normal;
     border-radius: 0px;
 }
-
 /*** Navbar ***/
 .navbar {
     background-color: transparent;  /* Transparent background initially */
@@ -134,29 +133,24 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 .navbar.sticky-top.scrolled {
     background-color: #d4af37;  /* Set yellow background when scrolled */
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);  /* Optional shadow for effect */
+    color: #000000;  /* Set text color to black or any contrasting color */
 }
 
-.navbar .dropdown-toggle::after {
-    border: none;
-    content: "\f107";
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    vertical-align: middle;
-    margin-left: 8px;
-}
-
-.navbar-light .navbar-nav .nav-link {
-    margin-right: 30px;
-    padding: 25px 0;
-    color: #FFFFFF; /* White text color */
+/* Navbar Links */
+.navbar .navbar-nav .nav-link {
+    color: #FFFFFF;  /* Default white text color */
     font-size: 15px;
     text-transform: uppercase;
+    margin-right: 30px;
+    padding: 25px 0;
     outline: none;
+    transition: color 0.3s ease; /* Smooth transition for hover effect */
 }
 
-.navbar-light .navbar-nav .nav-link:hover,
-.navbar-light .navbar-nav .nav-link.active {
-    color: var(--primary);
+/* Change text color on hover or when active */
+.navbar .navbar-nav .nav-link:hover,
+.navbar .navbar-nav .nav-link.active {
+    color: #d4af37; /* Change to yellow on hover */
 }
 
 @media (max-width: 991.98px) {
@@ -180,6 +174,17 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
     font-weight: 500;
 }
 
+/* Navbar Dropdown Menu */
+.navbar .dropdown-toggle::after {
+    border: none;
+    content: "\f107";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    vertical-align: middle;
+    margin-left: 8px;
+}
+
+/* Dropdown hover effect */
 @media (min-width: 992px) {
     .navbar .nav-item .dropdown-menu {
         display: block;
