--- a/templates/fountainchurch/article_detail.html
+++ b/templates/fountainchurch/article_detail.html
@@ -11,8 +11,8 @@
                 <h1 class="display-3 text-white animated slideInDown">  </h1>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center">
-                        <li class="breadcrumb-item"><a class="text-white" href="{% url 'home' %}">Home</a></li>
-                        <li class="breadcrumb-item"><a class="text-white" href="{% url 'contact' %}">Contact</a></li>
+                        <li class="breadcrumb-item"><a class="text-white" href="{% url 'about' %}">About Us</a></li>
+                        <li class="breadcrumb-item"><a class="text-white" href="{% url 'contact' %}">Contact Us</a></li>
                     </ol>
                 </nav>
             </div>
