--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -124,26 +124,27 @@
         </div>
     </div>
 
-    <!-- Testimonial Start -->
-    <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container">
-            <div class="text-center">
-                <h1 class="mb-5" style="color: #d4af37;font-family: 'serif';">Witnesses of Grace</h1>
-            </div><br>
-            <div class="owl-carousel testimonial-carousel position-relative" style="border-radius: 15px; overflow: hidden;">
-                {% for testimony_image in testimony_images %}
-                <div class="testimonial-item text-center" style="border-radius: 5px; overflow: hidden;">
-                    <img class="border rounded-circle p-2 mx-auto mb-3" src="{{ testimony_image.fountain_church_minister_home_img.url }}" style="width: 80px; height: 80px; border-radius: 50%; border-radius:5px;">
-                    <h5 class="mb-0" style="color: #d4af37;font-family: 'serif';">{{ testimony_image.fountain_church_minister_home_title }}</h5>
-                    <p style="font-family: 'serif';">{{ testimony_image.fountain_church_minister_home_position }}</p>
-                    <div class="testimonial-text bg-light text-center p-4" style="border-radius: 15px;">
-                        <p class="mb-0"style="font-family: 'serif';">{{ testimony_image.fountain_church_minister_home_description }}</p>
-                    </div>
+ <!-- Testimonial Start -->
+<div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
+    <div class="container">
+        <div class="text-center">
+            <h1 class="mb-5" style="color: #d4af37; font-family: 'serif';">Witnesses of Grace</h1>
+        </div>
+        <div class="owl-carousel testimonial-carousel position-relative" style="border-radius: 15px; overflow: hidden;">
+            {% for testimony_image in testimony_images %}
+            <div class="testimonial-item text-center" style="border-radius: 5px; overflow: hidden;">
+                <img class="border rounded-circle p-2 mx-auto mb-3" src="{{ testimony_image.fountain_church_minister_home_img.url }}" style="width: 80px; height: 80px; border-radius: 50%;" alt="">
+                <h5 class="mb-0" style="color: #d4af37; font-family: 'serif';">{{ testimony_image.fountain_church_minister_home_title }}</h5>
+                <p style="font-family: 'serif';">{{ testimony_image.fountain_church_minister_home_position }}</p>
+                <div class="testimonial-text bg-light text-center p-4" style="border-radius: 15px;">
+                    <p class="mb-0" style="font-family: 'serif';">{{ testimony_image.fountain_church_minister_home_description }}</p>
                 </div>
-                {% endfor %}
             </div>
+            {% endfor %}
         </div>
     </div>
-    <!-- Testimonial End -->
+</div>
+<!-- Testimonial End -->
+
 
 {% endblock %}
