Remove deleted files from the repository

--- a/templates/fountainchurch/about_us.html
+++ b/templates/fountainchurch/about_us.html
@@ -31,7 +31,7 @@
                 <div class="col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
-                            <i class="fa fa-3x fa-book text-primary mb-4"></i>
+                            <i class="fa fa-3x fa-book text-danger mb-4"></i>
                             <h5 class="mb-3"style="font-family: 'serif';color: #d4af37;">His Word</h5>
                             <p style="font-family: 'serif';">Inspiring people to follow Jesus and fearlessly change the</p>
                         </div>
@@ -40,7 +40,7 @@
                 <div class="col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item text-center pt-3">
                         <div class="p-4"> 
-                            <i class="fa fa-3x fa-globe text-primary mb-4"></i>
+                            <i class="fa fa-3x fa-globe text-danger mb-4"></i>
                             <h5 class="mb-3"style="font-family: 'serif';color: #d4af37;">His People</h5>
                             <p style="font-family: 'serif';">Join us as we gather at one of our Fountain campuses.</p>
                         </div>
@@ -49,7 +49,7 @@
                 <div class="col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
-                            <i class="fa fa-3x fa-home text-primary mb-4"></i>
+                            <i class="fa fa-3x fa-home text-danger mb-4"></i>
                             <h5 class="mb-3"style="font-family: 'serif';color: #d4af37;">His church</h5>
                             <p style="font-family: 'serif';">  We bring worship services to people unable to attend church regularly</p>
                         </div>
@@ -93,9 +93,7 @@
                         <div class="col-sm-10">
                             <p class="mb-0"style="font-family: 'serif';"><i class="fa fa-arrow-right text-primary me-2"></i> Sunday Service: 9:00 AM - 11: AM</p>
                         </div>
-                        <div class="col-sm-10">
-                            <p class="mb-0"style="font-family: 'serif';"><i class="fa fa-arrow-right text-primary me-2"></i> Monday Prayer Meeting: 6:30 PM - 8:00 PM</p>
-                        </div>
+                       
                         <div class="col-sm-10">
                             <p class="mb-0"style="font-family: 'serif';"><i class="fa fa-arrow-right text-primary me-2"></i>Wednesday Bible Study: 6:30 PM - 8:30 PM </p>
                         </div>
