--- a/templates/fountainchurch/vision.html
+++ b/templates/fountainchurch/vision.html
@@ -8,7 +8,7 @@
     <div class="container py-5">
         <div class="row justify-content-center">
             <div class="col-lg-10 text-center">
-                <h6 class="display-3 text-white animated slideInDown"style="font-family: 'serif';">Vision & MISSION</h6>
+                <h6 class="display-3 text-white animated slideInDown"style="font-family: 'serif';">Vision & Mission</h6>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center">
                         <li class="breadcrumb-item"><a class="text-white" href="{% url 'home' %}"style="font-family: 'serif';">Home</a></li>
